src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    IN

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     block -> LCURLYBRACE RCURLYBRACE
Rule 3     block -> LCURLYBRACE stmt_tail RCURLYBRACE
Rule 4     stmt_tail -> stmt
Rule 5     stmt_tail -> stmt stmt_tail
Rule 6     stmt -> while
Rule 7     stmt -> assignment
Rule 8     stmt -> conditional
Rule 9     stmt -> print
Rule 10    print -> PRINT LPAREN expr RPAREN SEMICOLON
Rule 11    assignment -> VARIABLE EQUALS expr SEMICOLON
Rule 12    while -> WHILE LPAREN expression RPAREN block
Rule 13    conditional -> IF LPAREN expression RPAREN block
Rule 14    conditional -> IF LPAREN expression RPAREN block else_if_blocks
Rule 15    else_if_blocks -> else_if_block
Rule 16    else_if_blocks -> else_if_block else_if_blocks
Rule 17    else_if_block -> ELSE block
Rule 18    expr -> LBRACKET list_elem RBRACKET
Rule 19    expr -> expr LBRACKET expression RBRACKET
Rule 20    expr -> LBRACKET RBRACKET
Rule 21    expr -> expression
Rule 22    list_elem -> expr list_tail
Rule 23    list_tail -> COMMA expr list_tail
Rule 24    list_tail -> <empty>
Rule 25    expr -> LPAREN expr RPAREN
Rule 26    expression -> expression LT expression
Rule 27    expression -> expression LTEQ expression
Rule 28    expression -> expression EQ expression
Rule 29    expression -> expression NOTEQ expression
Rule 30    expression -> expression GT expression
Rule 31    expression -> expression GTEQ expression
Rule 32    expression -> expression AND expression
Rule 33    expression -> expression OR expression
Rule 34    expression -> expression NOT expression
Rule 35    expression -> expression PLUS expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression TIMES expression
Rule 38    expression -> expression DIVIDE expression
Rule 39    expression -> expression FDIV expression
Rule 40    expression -> expression EXP expression
Rule 41    expression -> expression MOD expression
Rule 42    expression -> factor
Rule 43    expression -> string
Rule 44    expression -> VARIABLE
Rule 45    factor -> NUMBER
Rule 46    string -> STRING

Terminals, with rules where they appear

AND                  : 32
COMMA                : 23
DIVIDE               : 38
ELSE                 : 17
EQ                   : 28
EQUALS               : 11
EXP                  : 40
FDIV                 : 39
GT                   : 30
GTEQ                 : 31
IF                   : 13 14
IN                   : 
LBRACKET             : 18 19 20
LCURLYBRACE          : 2 3
LPAREN               : 10 12 13 14 25
LT                   : 26
LTEQ                 : 27
MINUS                : 36
MOD                  : 41
NOT                  : 34
NOTEQ                : 29
NUMBER               : 45
OR                   : 33
PLUS                 : 35
PRINT                : 10
RBRACKET             : 18 19 20
RCURLYBRACE          : 2 3
RPAREN               : 10 12 13 14 25
SEMICOLON            : 10 11
STRING               : 46
TIMES                : 37
VARIABLE             : 11 44
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

assignment           : 7
block                : 1 12 13 14 17
conditional          : 8
else_if_block        : 15 16
else_if_blocks       : 14 16
expr                 : 10 11 19 22 23 25
expression           : 12 13 14 19 21 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41
factor               : 42
list_elem            : 18
list_tail            : 22 23
print                : 9
start                : 0
stmt                 : 4 5
stmt_tail            : 3 5
string               : 43
while                : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) block -> . LCURLYBRACE RCURLYBRACE
    (3) block -> . LCURLYBRACE stmt_tail RCURLYBRACE

    LCURLYBRACE     shift and go to state 1

    block                          shift and go to state 2
    start                          shift and go to state 3

state 1

    (2) block -> LCURLYBRACE . RCURLYBRACE
    (3) block -> LCURLYBRACE . stmt_tail RCURLYBRACE
    (4) stmt_tail -> . stmt
    (5) stmt_tail -> . stmt stmt_tail
    (6) stmt -> . while
    (7) stmt -> . assignment
    (8) stmt -> . conditional
    (9) stmt -> . print
    (12) while -> . WHILE LPAREN expression RPAREN block
    (11) assignment -> . VARIABLE EQUALS expr SEMICOLON
    (13) conditional -> . IF LPAREN expression RPAREN block
    (14) conditional -> . IF LPAREN expression RPAREN block else_if_blocks
    (10) print -> . PRINT LPAREN expr RPAREN SEMICOLON

    RCURLYBRACE     shift and go to state 8
    WHILE           shift and go to state 12
    VARIABLE        shift and go to state 7
    IF              shift and go to state 4
    PRINT           shift and go to state 10

    conditional                    shift and go to state 11
    stmt_tail                      shift and go to state 5
    stmt                           shift and go to state 6
    print                          shift and go to state 13
    while                          shift and go to state 14
    assignment                     shift and go to state 9

state 2

    (1) start -> block .

    $end            reduce using rule 1 (start -> block .)


state 3

    (0) S' -> start .



state 4

    (13) conditional -> IF . LPAREN expression RPAREN block
    (14) conditional -> IF . LPAREN expression RPAREN block else_if_blocks

    LPAREN          shift and go to state 15


state 5

    (3) block -> LCURLYBRACE stmt_tail . RCURLYBRACE

    RCURLYBRACE     shift and go to state 16


state 6

    (4) stmt_tail -> stmt .
    (5) stmt_tail -> stmt . stmt_tail
    (4) stmt_tail -> . stmt
    (5) stmt_tail -> . stmt stmt_tail
    (6) stmt -> . while
    (7) stmt -> . assignment
    (8) stmt -> . conditional
    (9) stmt -> . print
    (12) while -> . WHILE LPAREN expression RPAREN block
    (11) assignment -> . VARIABLE EQUALS expr SEMICOLON
    (13) conditional -> . IF LPAREN expression RPAREN block
    (14) conditional -> . IF LPAREN expression RPAREN block else_if_blocks
    (10) print -> . PRINT LPAREN expr RPAREN SEMICOLON

    RCURLYBRACE     reduce using rule 4 (stmt_tail -> stmt .)
    WHILE           shift and go to state 12
    VARIABLE        shift and go to state 7
    IF              shift and go to state 4
    PRINT           shift and go to state 10

    conditional                    shift and go to state 11
    stmt_tail                      shift and go to state 17
    stmt                           shift and go to state 6
    print                          shift and go to state 13
    while                          shift and go to state 14
    assignment                     shift and go to state 9

state 7

    (11) assignment -> VARIABLE . EQUALS expr SEMICOLON

    EQUALS          shift and go to state 18


state 8

    (2) block -> LCURLYBRACE RCURLYBRACE .

    WHILE           reduce using rule 2 (block -> LCURLYBRACE RCURLYBRACE .)
    VARIABLE        reduce using rule 2 (block -> LCURLYBRACE RCURLYBRACE .)
    IF              reduce using rule 2 (block -> LCURLYBRACE RCURLYBRACE .)
    PRINT           reduce using rule 2 (block -> LCURLYBRACE RCURLYBRACE .)
    RCURLYBRACE     reduce using rule 2 (block -> LCURLYBRACE RCURLYBRACE .)
    ELSE            reduce using rule 2 (block -> LCURLYBRACE RCURLYBRACE .)
    $end            reduce using rule 2 (block -> LCURLYBRACE RCURLYBRACE .)


state 9

    (7) stmt -> assignment .

    WHILE           reduce using rule 7 (stmt -> assignment .)
    VARIABLE        reduce using rule 7 (stmt -> assignment .)
    IF              reduce using rule 7 (stmt -> assignment .)
    PRINT           reduce using rule 7 (stmt -> assignment .)
    RCURLYBRACE     reduce using rule 7 (stmt -> assignment .)


state 10

    (10) print -> PRINT . LPAREN expr RPAREN SEMICOLON

    LPAREN          shift and go to state 19


state 11

    (8) stmt -> conditional .

    WHILE           reduce using rule 8 (stmt -> conditional .)
    VARIABLE        reduce using rule 8 (stmt -> conditional .)
    IF              reduce using rule 8 (stmt -> conditional .)
    PRINT           reduce using rule 8 (stmt -> conditional .)
    RCURLYBRACE     reduce using rule 8 (stmt -> conditional .)


state 12

    (12) while -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 20


state 13

    (9) stmt -> print .

    WHILE           reduce using rule 9 (stmt -> print .)
    VARIABLE        reduce using rule 9 (stmt -> print .)
    IF              reduce using rule 9 (stmt -> print .)
    PRINT           reduce using rule 9 (stmt -> print .)
    RCURLYBRACE     reduce using rule 9 (stmt -> print .)


state 14

    (6) stmt -> while .

    WHILE           reduce using rule 6 (stmt -> while .)
    VARIABLE        reduce using rule 6 (stmt -> while .)
    IF              reduce using rule 6 (stmt -> while .)
    PRINT           reduce using rule 6 (stmt -> while .)
    RCURLYBRACE     reduce using rule 6 (stmt -> while .)


state 15

    (13) conditional -> IF LPAREN . expression RPAREN block
    (14) conditional -> IF LPAREN . expression RPAREN block else_if_blocks
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTEQ expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NOTEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GTEQ expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression NOT expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression FDIV expression
    (40) expression -> . expression EXP expression
    (41) expression -> . expression MOD expression
    (42) expression -> . factor
    (43) expression -> . string
    (44) expression -> . VARIABLE
    (45) factor -> . NUMBER
    (46) string -> . STRING

    VARIABLE        shift and go to state 21
    NUMBER          shift and go to state 26
    STRING          shift and go to state 22

    string                         shift and go to state 24
    factor                         shift and go to state 25
    expression                     shift and go to state 23

state 16

    (3) block -> LCURLYBRACE stmt_tail RCURLYBRACE .

    WHILE           reduce using rule 3 (block -> LCURLYBRACE stmt_tail RCURLYBRACE .)
    VARIABLE        reduce using rule 3 (block -> LCURLYBRACE stmt_tail RCURLYBRACE .)
    IF              reduce using rule 3 (block -> LCURLYBRACE stmt_tail RCURLYBRACE .)
    PRINT           reduce using rule 3 (block -> LCURLYBRACE stmt_tail RCURLYBRACE .)
    RCURLYBRACE     reduce using rule 3 (block -> LCURLYBRACE stmt_tail RCURLYBRACE .)
    ELSE            reduce using rule 3 (block -> LCURLYBRACE stmt_tail RCURLYBRACE .)
    $end            reduce using rule 3 (block -> LCURLYBRACE stmt_tail RCURLYBRACE .)


state 17

    (5) stmt_tail -> stmt stmt_tail .

    RCURLYBRACE     reduce using rule 5 (stmt_tail -> stmt stmt_tail .)


state 18

    (11) assignment -> VARIABLE EQUALS . expr SEMICOLON
    (18) expr -> . LBRACKET list_elem RBRACKET
    (19) expr -> . expr LBRACKET expression RBRACKET
    (20) expr -> . LBRACKET RBRACKET
    (21) expr -> . expression
    (25) expr -> . LPAREN expr RPAREN
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTEQ expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NOTEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GTEQ expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression NOT expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression FDIV expression
    (40) expression -> . expression EXP expression
    (41) expression -> . expression MOD expression
    (42) expression -> . factor
    (43) expression -> . string
    (44) expression -> . VARIABLE
    (45) factor -> . NUMBER
    (46) string -> . STRING

    LBRACKET        shift and go to state 28
    LPAREN          shift and go to state 27
    VARIABLE        shift and go to state 21
    NUMBER          shift and go to state 26
    STRING          shift and go to state 22

    string                         shift and go to state 24
    factor                         shift and go to state 25
    expr                           shift and go to state 30
    expression                     shift and go to state 29

state 19

    (10) print -> PRINT LPAREN . expr RPAREN SEMICOLON
    (18) expr -> . LBRACKET list_elem RBRACKET
    (19) expr -> . expr LBRACKET expression RBRACKET
    (20) expr -> . LBRACKET RBRACKET
    (21) expr -> . expression
    (25) expr -> . LPAREN expr RPAREN
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTEQ expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NOTEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GTEQ expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression NOT expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression FDIV expression
    (40) expression -> . expression EXP expression
    (41) expression -> . expression MOD expression
    (42) expression -> . factor
    (43) expression -> . string
    (44) expression -> . VARIABLE
    (45) factor -> . NUMBER
    (46) string -> . STRING

    LBRACKET        shift and go to state 28
    LPAREN          shift and go to state 27
    VARIABLE        shift and go to state 21
    NUMBER          shift and go to state 26
    STRING          shift and go to state 22

    string                         shift and go to state 24
    factor                         shift and go to state 25
    expr                           shift and go to state 31
    expression                     shift and go to state 29

state 20

    (12) while -> WHILE LPAREN . expression RPAREN block
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTEQ expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NOTEQ expression
    (30) expression -> . expression GT expression
    (31) expression -> . expression GTEQ expression
    (32) expression -> . expression AND expression
    (33) expression -> . expression OR expression
    (34) expression -> . expression NOT expression
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression FDIV expression
    (40) expression -> . expression EXP expression
    (41) expression -> . expression MOD expression
    (42) expression -> . factor
    (43) expression -> . string
    (44) expression -> . VARIABLE
    (45) factor -> . NUMBER
    (46) string -> . STRING

    VARIABLE        shift and go to state 21
    NUMBER          shift and go to state 26
    STRING          shift and go to state 22

    string                         shift and go to state 24
    factor                         shift and go to state 25
    expression                     shift and go to state 32

state 21

    (44) expression -> VARIABLE .

    LT              reduce using rule 44 (expression -> VARIABLE .)
    LTEQ            reduce using rule 44 (expression -> VARIABLE .)
    EQ              reduce using rule 44 (expression -> VARIABLE .)
    NOTEQ           reduce using rule 44 (expression -> VARIABLE .)
    GT              reduce using rule 44 (expression -> VARIABLE .)
    GTEQ            reduce using rule 44 (expression -> VARIABLE .)
    AND             reduce using rule 44 (expression -> VARIABLE .)
    OR              reduce using rule 44 (expression -> VARIABLE .)
    NOT             reduce using rule 44 (expression -> VARIABLE .)
    PLUS            reduce using rule 44 (expression -> VARIABLE .)
    MINUS           reduce using rule 44 (expression -> VARIABLE .)
    TIMES           reduce using rule 44 (expression -> VARIABLE .)
    DIVIDE          reduce using rule 44 (expression -> VARIABLE .)
    FDIV            reduce using rule 44 (expression -> VARIABLE .)
    EXP             reduce using rule 44 (expression -> VARIABLE .)
    MOD             reduce using rule 44 (expression -> VARIABLE .)
    RPAREN          reduce using rule 44 (expression -> VARIABLE .)
    SEMICOLON       reduce using rule 44 (expression -> VARIABLE .)
    LBRACKET        reduce using rule 44 (expression -> VARIABLE .)
    COMMA           reduce using rule 44 (expression -> VARIABLE .)
    RBRACKET        reduce using rule 44 (expression -> VARIABLE .)


state 22

    (46) string -> STRING .

    RPAREN          reduce using rule 46 (string -> STRING .)
    LT              reduce using rule 46 (string -> STRING .)
    LTEQ            reduce using rule 46 (string -> STRING .)
    EQ              reduce using rule 46 (string -> STRING .)
    NOTEQ           reduce using rule 46 (string -> STRING .)
    GT              reduce using rule 46 (string -> STRING .)
    GTEQ            reduce using rule 46 (string -> STRING .)
    AND             reduce using rule 46 (string -> STRING .)
    OR              reduce using rule 46 (string -> STRING .)
    NOT             reduce using rule 46 (string -> STRING .)
    PLUS            reduce using rule 46 (string -> STRING .)
    MINUS           reduce using rule 46 (string -> STRING .)
    TIMES           reduce using rule 46 (string -> STRING .)
    DIVIDE          reduce using rule 46 (string -> STRING .)
    FDIV            reduce using rule 46 (string -> STRING .)
    EXP             reduce using rule 46 (string -> STRING .)
    MOD             reduce using rule 46 (string -> STRING .)
    SEMICOLON       reduce using rule 46 (string -> STRING .)
    LBRACKET        reduce using rule 46 (string -> STRING .)
    COMMA           reduce using rule 46 (string -> STRING .)
    RBRACKET        reduce using rule 46 (string -> STRING .)


state 23

    (13) conditional -> IF LPAREN expression . RPAREN block
    (14) conditional -> IF LPAREN expression . RPAREN block else_if_blocks
    (26) expression -> expression . LT expression
    (27) expression -> expression . LTEQ expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NOTEQ expression
    (30) expression -> expression . GT expression
    (31) expression -> expression . GTEQ expression
    (32) expression -> expression . AND expression
    (33) expression -> expression . OR expression
    (34) expression -> expression . NOT expression
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression
    (39) expression -> expression . FDIV expression
    (40) expression -> expression . EXP expression
    (41) expression -> expression . MOD expression

    RPAREN          shift and go to state 49
    LT              shift and go to state 34
    LTEQ            shift and go to state 37
    EQ              shift and go to state 36
    NOTEQ           shift and go to state 45
    GT              shift and go to state 41
    GTEQ            shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 38
    NOT             shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 33
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 39
    FDIV            shift and go to state 40
    EXP             shift and go to state 42
    MOD             shift and go to state 46


state 24

    (43) expression -> string .

    LT              reduce using rule 43 (expression -> string .)
    LTEQ            reduce using rule 43 (expression -> string .)
    EQ              reduce using rule 43 (expression -> string .)
    NOTEQ           reduce using rule 43 (expression -> string .)
    GT              reduce using rule 43 (expression -> string .)
    GTEQ            reduce using rule 43 (expression -> string .)
    AND             reduce using rule 43 (expression -> string .)
    OR              reduce using rule 43 (expression -> string .)
    NOT             reduce using rule 43 (expression -> string .)
    PLUS            reduce using rule 43 (expression -> string .)
    MINUS           reduce using rule 43 (expression -> string .)
    TIMES           reduce using rule 43 (expression -> string .)
    DIVIDE          reduce using rule 43 (expression -> string .)
    FDIV            reduce using rule 43 (expression -> string .)
    EXP             reduce using rule 43 (expression -> string .)
    MOD             reduce using rule 43 (expression -> string .)
    RPAREN          reduce using rule 43 (expression -> string .)
    SEMICOLON       reduce using rule 43 (expression -> string .)
    LBRACKET        reduce using rule 43 (expression -> string .)
    COMMA           reduce using rule 43 (expression -> string .)
    RBRACKET        reduce using rule 43 (expression -> string .)


state 25

    (42) expression -> factor .

    LT              reduce using rule 42 (expression -> factor .)
    LTEQ            reduce using rule 42 (expression -> factor .)
    EQ              reduce using rule 42 (expression -> factor .)
    NOTEQ           reduce using rule 42 (expression -> factor .)
    GT              reduce using rule 42 (expression -> factor .)
    GTEQ            reduce using rule 42 (expression -> factor .)
    AND             reduce using rule 42 (expression -> factor .)
    OR              reduce using rule 42 (expression -> factor .)
    NOT             reduce using rule 42 (expression -> factor .)
    PLUS            reduce using rule 42 (expression -> factor .)
    MINUS           reduce using rule 42 (expression -> factor .)
    TIMES           reduce using rule 42 (expression -> factor .)
    DIVIDE          reduce using rule 42 (expression -> factor .)
    FDIV            reduce using rule 42 (expression -> factor .)
    EXP             reduce using rule 42 (expression -> factor .)
    MOD             reduce using rule 42 (expression -> factor .)
    RPAREN          reduce using rule 42 (expression -> factor .)
    SEMICOLON       reduce using rule 42 (expression -> factor .)
    LBRACKET        reduce using rule 42 (expression -> factor .)
    COMMA           reduce using rule 42 (expression -> factor .)
    RBRACKET        reduce using rule 42 (expression -> factor .)


state 26

    (45) factor -> NUMBER .

    LT              reduce using rule 45 (factor -> NUMBER .)
    LTEQ            reduce using rule 45 (factor -> NUMBER .)
    EQ              reduce using rule 45 (factor -> NUMBER .)
    NOTEQ           reduce using rule 45 (factor -> NUMBER .)
    GT              reduce using rule 45 (factor -> NUMBER .)
    GTEQ            reduce using rule 45 (factor -> NUMBER .)
    AND             reduce using rule 45 (factor -> NUMBER .)
    OR              reduce using rule 45 (factor -> NUMBER .)
    NOT             reduce using rule 45 (factor -> NUMBER .)
    PLUS            reduce using rule 45 (factor -> NUMBER .)
    MINUS           reduce using rule 45 (factor -> NUMBER .)
    TIMES           reduce using rule 45 (factor -> NUMBER .)
    DIVIDE          reduce using rule 45 (factor -> NUMBER .)
    FDIV            reduce using rule 45 (factor -> NUMBER .)
    EXP             reduce using rule 45 (factor -> NUMBER .)
    MOD             reduce using rule 45 (factor -> NUMBER .)
    RPAREN          reduce using rule 45 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 45 (factor -> NUMBER .)
    LBRACKET        reduce using rule 45 (factor -> NUMBER .)
    COMMA           reduce using rule 45 (factor -> NUMBER .)
    RBRACKET        reduce using rule 45 (factor -> NUMBER .)


state 27
